# GSplat

./: .gitignore  README.md
PlyLoader/: CMakeLists.txt  vcpkg.json
PlyLoader/include/: PlyLoader.h
PlyLoader/src/: PlyLoader.cpp
PlyLoader/tests/: TestPlyLoader.cpp
PlyLoader/tests/files/: invalidMagicNumber.ply  validAscii.ply  validBinary.ply  validMagicNumber.ply
SplatViewer/: CMakeLists.txt  README.md
SplatViewer/include/: FirstPersonCamera.h  NGLScene.h  PlyLoader.h  Splat.h
SplatViewer/shaders/: PointSplatFragment.glsl  PointSplatVertex.glsl  SplatFragment.glsl  SplatGeometry.glsl  SplatVertex.glsl
SplatViewer/src/: FirstPersonCamera.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  PlyLoader.cpp  Splat.cpp  main.cpp
